updates radio buttons and logic for said buttons to fix misalignment

--- a/src/components/pages/RoleApply/Applications/Styles/mentorApplication.css
+++ b/src/components/pages/RoleApply/Applications/Styles/mentorApplication.css
@@ -33,10 +33,6 @@
   display: flex;
   gap: 2rem;
 }
-.em {
-  display: flex;
-  width: 50%;
-}
 .form-group {
   display: flex;
   flex-direction: column;
